feat: add typewriter effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>Anna's Website</h1>
+<div class="container-fluid h-100 p-5 bg-primary">
+  <h1 class="text-secondary display-1 font-weight-bold">
+    {{ title }}
+  </h1>
+  <h2 class="text-secondary display-2 font-weight-lighter">
+    {{ description }}
+  </h2>
+</div>
