--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+// @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
+@import '~src/assets/custom.scss';
+
+html, body {
+    height: 100vh;
+}
