feat: add about me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid h-100 p-5 bg-primary">
-  <div class="intro row h-100 align-items-lg-center">
+<div class="container-fluid h-100">
+  <div class="intro row h-100 p-5 bg-primary align-items-lg-center">
     <div class="col">
       <h1 class="name text-secondary display-1 font-weight-bold">
         {{ title }}&nbsp;
@@ -13,14 +13,23 @@
       <i class="arrow down"></i>
     </div>
   </div>
-  <div class="row h-100 align-items-lg-center">
-    <div class="col">
-      <!-- <h1 class="name text-secondary display-1 font-weight-bold">
-        {{ title }}&nbsp;
-      </h1>
-      <h2 class="tagline text-secondary display-2 font-weight-lighter">
-        {{ description }}&nbsp;
-      </h2> -->
+  <div class="row">
+    <div
+      class="col-lg-6 bg-light p-5 display-1 text-secondary font-weight-bold"
+    >
+      About me
+    </div>
+    <div class="col-lg-6 bg-secondary p-5 text-light lead">
+      I am Anna, I am 27 years old, and I am a writer – out of passion. Since I
+      was a teenager, I have been reading and writing a lot. The power of words
+      is astonishing. One sentence can chance the surroundings of the reader
+      from a sunny day to a cold, starless winter’s night. One paragraph can
+      make a reader cry. One page can change their life. That is what always
+      fascinated me about writing, about words. But when I grew older, another
+      interest took shape: natural sciences. Currently, I am finishing my
+      master’s degree in Geosciences. During the last years, I was able to learn
+      about our planet and how it works, and about life itself. That is why I
+      also love writing about natural sciences.
     </div>
   </div>
 </div>
