feat: add services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,12 +14,10 @@
     </div>
   </div>
   <div class="row">
-    <div
-      class="col-lg-6 bg-light p-5 display-1 text-secondary font-weight-bold"
-    >
+    <div class="col-lg-6 bg-light p-lg-5 p-4s text-secondary display-2 font-weight-lighter">
       About me
     </div>
-    <div class="col-lg-6 bg-secondary p-5 text-light lead">
+    <div class="col-lg-6 bg-secondary p-lg-5 p-4s text-light lead">
       I am Anna, I am 27 years old, and I am a writer – out of passion. Since I
       was a teenager, I have been reading and writing a lot. The power of words
       is astonishing. One sentence can chance the surroundings of the reader
@@ -32,4 +30,26 @@
       also love writing about natural sciences.
     </div>
   </div>
+  <div class="row bg-primary">
+    <div class="col-lg-12 px-lg-5 pt-lg-5 px-4s pt-4s  text-secondary display-2 font-weight-lighter">
+      Services
+    </div>
+  </div>
+  <div class="row bg-primary">
+    <div class="col-lg-6 p-lg-5 p-4s text-secondary lead">
+      <h2>Creative Writing</h2>
+      Fancy a story that was written just for yourself? The occasion or reason does not matter. It can be a present toyour husband or an
+      e-book you want to sell on Amazon. What do you need to do to get it started? Naturally, this depends on what your requirements are.
+      You can just give me a word and I’ll create a new world for you, or you can give me exact instructions on everything, and I’ll put it
+      on paper. There are no limits – I am a creative thinker, so I do not need to follow the rules. It does not have to be a story that
+      starts at A and ends at Z. What about a narrative that has a different ending every time you read it?
+    </div>
+    <div class="col-lg-6 p-lg-5 p-4s text-secondary lead">
+      <h2>Natural Sciences</h2>
+      As I am studying Geosciences, I have a basic understanding of all kinds of natural sciences like biology, chemistry, and physics. This
+      gives me the ability to understand and write texts on these topics. I would love to put this knowledge into easy words everybody can
+      comprehend. Furthermore, I am up to do thorough research. During the you have to respect for papers, theses, and so on.
+    </div>
+  </div>
+  <!-- <div class="col-lg-6 bg-secondary p-5 text-light lead"></div> -->
 </div>
