--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid h-100">
+<div class="container-fluid h-100" *ngIf="content">
   <div class="intro row h-100 p-5 bg-primary align-items-lg-center">
     <div class="col">
       <h1 class="name text-secondary display-1 font-weight-bold">
         {{ title }}&nbsp;
       </h1>
       <h2 class="tagline text-secondary display-2 font-weight-lighter">
-        {{ description }}&nbsp;
+        {{ subtitle }}&nbsp;
       </h2>
     </div>
     <div class="scroll" *ngIf="isTypewriterDone" [@enterAnimation]>
@@ -15,74 +15,54 @@
   </div>
   <div class="row bg-secondary">
     <div class="col-lg-4 p-lg-5 p-4s text-light display-2 font-weight-lighter">
-      About me
+      {{content.aboutTitle}}
     </div>
     <div class="col-lg-8 bg-secondary p-lg-5 p-4s text-light lead">
-      I am Anna, I am 27 years old, and I am a writer – out of passion. <br><br> The power of words
-      is astonishing. One sentence can shape the surroundings of the reader
-      from a sunny day to a cold starless winter’s night. One paragraph can
-      make a reader cry. One page can change their life.
-      That is what always fascinated me about writing, about words.
-      <br><br>
-      But when I grew older, another interest took shape: natural sciences. Currently, I am finishing my
-      master’s degree in Geosciences. During the last years, I was able to learn
-      about our planet and how it works, and about life itself. That is why I
-      also love writing about natural sciences.
-      <br><br>
-      PS: I was born in Austria, and therefore my mother tongue is German. Regardless, I am fluent in English and Spanish, and I have basic
-      skills in French.
+      <ng-container *ngFor="let paragraph of content.aboutContent.content; let last=last">
+        {{paragraph.content[0].value}} <br *ngIf="!last"><br *ngIf="!last">
+      </ng-container>
     </div>
   </div>
   <div class="row bg-primary">
     <div class="col-lg-12 px-lg-5 pt-lg-5 px-4s pt-4s text-secondary display-2 font-weight-lighter">
-      Services
+      {{content.servicesTitle}}
     </div>
   </div>
   <div class="row bg-primary pb-4">
     <div class="col-lg-6 p-lg-5 p-4s text-secondary lead">
-      <h2>Creative Writing</h2>
-      Fancy a story that was written just for yourself? The occasion or reason does not matter. It can be a present to your husband or an
-      e-book you want to sell on Amazon. What do you need to do to get it started? Naturally, this depends on what your requirements are.
-      You can just give me a word and I’ll create a new world for you, or you can give me exact instructions on everything, and I’ll put it
-      on paper. There are no limits – I am a creative thinker, so I do not need to follow the rules. It does not have to be a story that
-      starts at A and ends at Z. What about a narrative that has a different ending every time you read it?
+      <h2>{{content.firstServiceTitle}}</h2>
+      {{content.firstServiceContent}}
     </div>
     <div class="col-lg-6 p-lg-5 p-4s text-secondary lead">
-      <h2>Natural Sciences</h2>
-      As I am studying Geosciences, I have a basic understanding of all kinds of natural sciences like biology, chemistry, and physics. This
-      gives me the ability to understand and write texts on these topics. I would love to put this knowledge into easy words everybody can
-      comprehend. Furthermore, I am up to do thorough research. During the you have to respect for papers, theses, and so on.
+      <h2>{{content.secondServiceTitle}}</h2>
+      {{content.secondServiceContent}}
     </div>
   </div>
   <div class="row bg-secondary">
     <div class="col-lg-12 px-lg-5 pt-lg-5 px-4s pt-4s text-light display-2 font-weight-lighter">
-      Pricing
+      {{content.pricingTitle}}
     </div>
   </div>
-  <div class="row bg-secondary text-light lead">
+  <div class="row bg-secondary text-light lead pb-5">
     <div class="col-lg-6 p-lg-5 p-4s text-text-light lead">
-      <h2>Overview</h2>
-      Without a doubt, this depends on various factors. Do I have to do a lot of research, or can I just sit down and write? Do I have to
-      give up the rights to my writing? Do you want to put the text on the market and make money out of it?
+      <h2>{{content.firstPricingTitle}}</h2>
+      {{content.firstPricingContent}}
     </div>
     <div class="col-lg-6 p-lg-5 p-4s text-text-light lead">
-      <h2>Give me a rough estimation!</h2>
-      To give you an idea, for Creative Writing I would generally ask you for 3 cents (Euros) per word, if I should subrogate the rights to
-      you it is 4 cents per word. For texts on natural sciences, the most common price is 4 to 5 cents per word.
+      <h2>{{content.secondPricingTitle}}</h2>
+      {{content.secondPricingContent}}
     </div>
   </div>
   <div class="row">
     <div class="col-lg-12 px-lg-5 pt-lg-5 px-4s pt-4s display-2 font-weight-lighter">
-      Contact
+      {{content.contactTitle}}
     </div>
   </div>
   <div class="row">
     <div class="col-lg-6 p-lg-5 p-4s lead">
-      If you would like to contact me, here is my email, and I will get back to you as soon as possible! To make our
-      communication smoother, you should describe in detail what service you would like to buy.
-      <br><br>
-      Thank you very much for reaching out, and I
-      am happy to read you in my mail 😊
+      <ng-container *ngFor="let paragraph of content.contactContent.content; let last=last">
+        {{paragraph.content[0].value}} <br *ngIf="!last"><br *ngIf="!last">
+      </ng-container>
     </div>
     <div class="col-lg-6 px-lg-5 pt-lg-5 px-4s pt-4s display-4 font-weight-lighter text-center text-secondary">
       <a href="mailto:anna.mikulics@gmail.com" class="">anna.mikulics@gmail.com</a>
