feat: fix styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
         {{paragraph.content[0].value}} <br *ngIf="!last"><br *ngIf="!last">
       </ng-container>
     </div>
-    <div class="col-lg-6 px-lg-5 pt-lg-5 px-4s pt-4s display-4 font-weight-lighter text-center text-secondary">
+    <div class="col-lg-6 px-lg-5 pt-lg-5 px-4s pt-4s display-4 email font-weight-lighter text-center text-secondary">
       <a href="mailto:anna.mikulics@gmail.com" class="">anna.mikulics@gmail.com</a>
     </div>
   </div>
