--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,10 @@
   h1.name {
     word-spacing: 5rem;
   }
+  .email{
+    font-size: 2rem;
+    padding-bottom: 4rem;
+  }
 }
 
 @keyframes float {
